# Copilot-Proxy

./: .env.example  .gitignore  README.md  litellm.yaml  models.toml.example  pyproject.toml
scripts/: start.cmd  start.ps1  start.sh
src/copilot_proxy/: __init__.py  anthropic_transform.py  auth.py  cli.py  config_files.py  github_copilot_models.py  github_copilot_patch.py  litellm_registry.py  main.py  model_store.py  proxy_errors.py  serialization.py  settings.py
tests/: test_anthropic_transform.py  test_cli.py  test_github_copilot_models.py  test_github_copilot_patch.py  test_proxy_errors.py  test_settings.py
