[project]
name = "cpx"
version = "0.1.0"
description = "Local LiteLLM proxy for GitHub Copilot models with OpenAI and Anthropic-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "litellm[proxy]>=1.63.8",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
cpx = "copilot_proxy.cli:main"
cpx-server = "copilot_proxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_proxy"]

[tool.hatch.build.targets.wheel.force-include]
"models.toml.example" = "copilot_proxy/models.toml.example"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
